# GraduationDesign

./: .drone.yml  .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  .prettierrc.cjs  CHANGELOG.md  Cargo.toml  README.md  biome.json  bun.lockb  justfile  package.json  panda.config.ts  pnpm-lock.yaml  tsconfig.json  turbo.json  vite.config.ts
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20240128_041649_create_plantation_enterprises.rs  m20240128_064315_create_processing_company.rs  m20240128_064315_create_processing_enterprises.rs  m20240131_085823_create_logistics_enterprises.rs  m20240212_130145_create_selling_enterprises.rs  m20240321_163618_create_farms_table.rs  m20240321_163642_create_seeds_table.rs  m20240321_164456_create_planting_records_table.rs  m20240321_164516_create_pesticide_usage_records_table.rs  m20240321_164532_create_harvest_records_table.rs  m20240321_164553_create_product_inspection_records_table.rs  m20240321_164619_create_pesticide_residue_detection_records_table.rs  m20240321_165622_create_risk_assessment_table.rs  m20240321_165638_create_alert_information_table.rs  m20240321_165646_create_report_table.rs  m20240321_165654_create_analysis_table.rs  m20240321_165701_create_users_table.rs  m20240321_165712_create_operation_logs_table.rs  m20240321_165725_create_enforcement_records_table.rs  m20240321_165743_create_penalty_records_table.rs  m20240321_165753_create_statistical_data_table.rs  m20240321_165803_create_query_logs_table.rs  m20240321_165814_create_quality_feedback_table.rs
src/: App.tsx  errors.rs  lib.rs  (+1 more)
(+88 files in other folders)
