[workspace]
resolver = "2"
members = ["apps/server", "crates/entity", "crates/migration"]

[workspace.dependencies]
# orm
sea-orm = { version = "0.12.10" }

# async runtime
tokio = { version = "1.35.1", features = ["full"] }

# serialization and deserialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
