[workspace]
resolver = "2"
members = ["apps/server", "crates/entity", "crates/migration"]

[workspace.package]
edition = "2021"
rust-version = "1.76.0"

[workspace.dependencies]
# orm
sea-orm = { version = "0.12.10" }

# async runtime
tokio = { version = "1.35.1", features = ["full"] }

# serialization and deserialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
