[workspace]
resolver = "2"
members = ["apps/server", "crates/entity", "crates/migration"]

[workspace.dependencies]
# orm
sea-orm = { version = "0.12.15" }

# async runtime
tokio = { version = "1.36.0", features = ["full"] }

# serialization and deserialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
